remove unused things and  css change

--- a/src/app/site-home/components/site-summary/site-summary.component.scss
+++ b/src/app/site-home/components/site-summary/site-summary.component.scss
@@ -11,7 +11,7 @@ $normalTextSize: 14px;
 .site-summary {
   color: $themeFontColor;
 
-  p {
+  p:not(.small) {
     margin: 0;
     font-size: $normalTextSize;
   }
