--- a/src/app/shared/components/charting/charting.component.html
+++ b/src/app/shared/components/charting/charting.component.html
@@ -1,12 +1,11 @@
 <highcharts-chart *ngIf="chartType === 'line'" [id]="id" [Highcharts]="Highcharts" [constructorType]="chartConstructor"
   [options]="chartOptions" [callbackFunction]="chartCallback" [(update)]="updateFlag" [oneToOne]="oneToOneFlag"
-  [runOutsideAngular]="runOutsideAngularFlag" style="width: 100%; height: 400px; display: block;"></highcharts-chart>
+  [runOutsideAngular]="runOutsideAngularFlag"></highcharts-chart>
 
 <highcharts-chart *ngIf="chartType === 'polar'" [id]="id" [Highcharts]="Highcharts" [constructorType]="chartConstructor"
   [options]="chartOptions" [callbackFunction]="chartCallback" [(update)]="updateFlag" [oneToOne]="oneToOneFlag"
-  [runOutsideAngular]="runOutsideAngularFlag" style="width: 100%; height: 400px; display: block;"></highcharts-chart>
-<hr />
+  [runOutsideAngular]="runOutsideAngularFlag"></highcharts-chart>
 
 <highcharts-chart *ngIf="chartType === 'area'" [id]="id" [Highcharts]="Highcharts" [constructorType]="chartConstructor"
   [options]="chartOptions" [callbackFunction]="chartCallback" [(update)]="updateFlag" [oneToOne]="oneToOneFlag"
-  [runOutsideAngular]="runOutsideAngularFlag" style="width: 100%; height: 400px; display: block;"></highcharts-chart>
+  [runOutsideAngular]="runOutsideAngularFlag"></highcharts-chart>
