--- a/src/app/site-home/components/site-dashboard/site-dashboard.component.html
+++ b/src/app/site-home/components/site-dashboard/site-dashboard.component.html
@@ -1,12 +1,8 @@
-<div class="mainContainer">
   <div class="container tableContainer">
     <div class="row pt-2">
       <nav class="navbar pb-0 col">
         <div class="container">
-          <a class="h6 pointer">
-            Sites
-          </a>
-          <!-- <div class="col"></div> -->
+          <button class="btn btn-secondary "> Sites </button>
           <div class="ml-auto inline-flex">
             <a class="mr-3 pointer">
               <select class="form-control initial_width" name="site" id="">
@@ -14,7 +10,7 @@
               </select>
             </a>
             <a class="mr-3 pointer">
-              <button routerLink="add-site" class="btn btn-special">ADD SITE</button>
+              <button routerLink="add-site-one" class="btn btn-special">ADD SITE</button>
             </a>
           </div>
         </div>
@@ -55,4 +51,3 @@
       </div>
     </div>
   </div>
-</div>
