--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,4 @@
-@import '~bootstrap/dist/css/bootstrap.min.css';
+@import "~bootstrap/dist/css/bootstrap.min.css";
 
 $fontFamily: "Avenir LT Std 65 Medium";
 $bodyBg: #fafafa;
@@ -10,7 +10,8 @@ $themeFontColor: #0e89df;
 $secondaryColor: #f1f8fe;
 $inputBGColor: #f1f9ff;
 $borderColor: #bce0fd;
-
+$backgroundColor: #f1f9ff;
+$smallIconsFontSize: 16px;
 
 .theme_color {
   color: $themeColor;
@@ -29,7 +30,7 @@ $borderColor: #bce0fd;
 }
 
 .inline-flex {
-    display: inline-flex;
+  display: inline-flex;
 }
 
 .full-height {
@@ -76,7 +77,7 @@ $borderColor: #bce0fd;
   background-color: $inputBGColor !important;
   color: $themeColor !important;
   font-size: 12px !important;
-  text-align: center !important
+  text-align: center !important;
 }
 
 .container {
@@ -118,3 +119,32 @@ $borderColor: #bce0fd;
     color: $themeFontColor;
   }
 }
+
+// site summary and related pages css starts
+.action-button {
+  border: 1px solid $borderColor;
+  background: $backgroundColor;
+  padding: 4px;
+  color: $themeColor;
+  font-size: 12px;
+  border-radius: 6px;
+}
+
+.summary-form-field {
+  border: none;
+  background: inherit;
+  color: inherit;
+  font: inherit;
+}
+
+.main-content-small-icon {
+  font-size: $smallIconsFontSize;
+  color: $themeColor;
+}
+
+div.md-drppicker.double {
+  left: auto;
+  right: 8px;
+}
+
+// site summary and related pages css end
