--- a/src/app/fleet-view/components/overview/overview.component.html
+++ b/src/app/fleet-view/components/overview/overview.component.html
@@ -1,1 +1,8 @@
-<p>overview works!</p>
+<agm-map [latitude]='lat' [longitude]='lng' [zoom]="zoom">
+    <agm-marker *ngFor="let m of markers; let i = index" [latitude]="m.lat" [longitude]="m.lng" [label]="m.label"
+        [iconUrl]="iconUrl">
+        <agm-info-window>
+            <strong>{{m.label}}</strong>
+        </agm-info-window>
+    </agm-marker>
+</agm-map>
