--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -32,7 +32,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent1">
           <ul class="navbar-nav my-lg-0 w-100 justify-content-center">
             <li class="nav-item mr-3">
-              <a class="nav-link p-2" routerLink="/fleet-view">HOME</a>
+              <a class="nav-link p-2" routerLink="/home">HOME</a>
             </li>
             <li class="nav-item mr-3">
               <a class="nav-link p-2" routerLink="/site-home">SITES</a>
