--- a/src/app/auth/components/forget-password/forget-password.component.html
+++ b/src/app/auth/components/forget-password/forget-password.component.html
@@ -7,7 +7,7 @@
                     <div class="form-group">
                         <label class="input_label">E-mail</label>
                         <input type="email" class="form-control" placeholder="Email Address" formControlName="email">
-                        <div *ngIf="submittedmsg && forgotPasswordForm.controls.email.errors" class="error">
+                        <div *ngIf="submittedMsg && forgotPasswordForm.controls.email.errors" class="error">
                             <div *ngIf="forgotPasswordForm.controls.email.errors.required">
                                 This field is required
                             </div>
@@ -20,7 +20,7 @@
 
                     <div class="row mt-5">
                         <div class="col-12">
-                            <button type="submit" class="btn btn-special">RETRIVE PASSWORD</button>
+                            <button type="submit" class="btn btn-special">RETRIEVE PASSWORD</button>
                         </div>
                     </div>
                     <div class="row mt-5 pt-3">
