--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -3,11 +3,11 @@
         <div class="col-sm-7 side_announcement_area"></div>
         <div class="col-sm-5">
             <div class="p-5 content_area">
-                <form [formGroup]="loginForm">
+                <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
                     <div class="form-group">
                         <label class="input_label">E-mail</label>
                         <input type="email" class="form-control" placeholder="Email Address" formControlName="email">
-                        <div *ngIf="submittedmsg && loginForm.controls.email.errors" class="error">
+                        <div *ngIf="submittedMsg && loginForm.controls.email.errors" class="error">
                             <div *ngIf="loginForm.controls.email.errors.required">
                                 This field is required
                             </div>
@@ -20,7 +20,7 @@
                     <div class="form-group ">
                         <label class="input_label">Password</label>
                         <input type="password" class="form-control" placeholder="Password" formControlName="password">
-                        <div *ngIf="submittedmsg && loginForm.controls.password.errors" class="error">
+                        <div *ngIf="submittedMsg && loginForm.controls.password.errors" class="error">
                             <div *ngIf="loginForm.controls.password.errors.required">
                                 This field is required
                             </div>
@@ -28,7 +28,7 @@
                     </div>
                     <div class="row mt-5">
                         <div class="col-12">
-                            <button type="submit" class="btn btn-special" (click)="login()">LOGIN</button>
+                            <button type="submit" class="btn btn-special">LOGIN</button>
                         </div>
                     </div>
                     <div class="row mt-5 pt-3">
