--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -19,7 +19,7 @@
         <i class="fa fa-search">icon</i>
       </a>
       <a class="mr-3 text-white pointer">
-        <i class="fa fa-search">icon</i>
+        <i class="fa fa-search" (click)="logOut()">Logout</i>
       </a>
     </div>
   </div>
