--- a/src/app/site-home/components/site-summary/channel-table/channel-table.component.html
+++ b/src/app/site-home/components/site-summary/channel-table/channel-table.component.html
@@ -4,7 +4,7 @@
       <nav class="navbar pb-0 col">
         <div class="container">
           <div class="">
-            <a class="pointer action-button mr-2" (click)="gotoPreviousPage()">
+            <a class="pointer action-button mr-2" (click)="gotoSiteHomePage()">
               <i class="bi bi-house-fill mr-1"></i>
               <span>Sites</span>
             </a>
