--- a/src/app/site-home/components/site-summary/site-summary.component.html
+++ b/src/app/site-home/components/site-summary/site-summary.component.html
@@ -5,7 +5,7 @@
         <!-- There will be a common component for this part in future -->
         <div class="container">
           <div class="">
-            <a class="pointer action-button mr-2" (click)="gotoPreviousPage()">
+            <a class="pointer action-button mr-2" (click)="gotoSiteHomePage()">
               <i class="bi bi-house-fill mr-1"></i>
               <span>Sites</span>
             </a>
